syntax = "proto3";

option go_package = ".";

package photo_sharing;

service Sharer {
    rpc PutPhoto (PutPhotoReq) returns (PutPhotoResp) {}
    rpc GetPhoto (GetPhotoReq) returns (GetPhotoResp) {} 
    rpc ListPhotos (ListPhotosReq) returns (ListPhotosResp) {}
}

message PutPhotoReq {
    string name = 1;
    bytes data = 2;
}

message PutPhotoResp {
    string file = 1;
}

message GetPhotoReq {
    string name = 1;
    string file = 2;
}

message GetPhotoResp {
    bytes data = 1;
}

message ListPhotosReq {
    string name = 1;
}

message ListPhotosResp {
    repeated string files = 1;
}